fixed white spaces

--- a/frontend/ui-ux/src/App.css
+++ b/frontend/ui-ux/src/App.css
@@ -21,11 +21,16 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+
+
+  color: #C8A1E0;
 }
 
 .App-link {
-  color: #61dafb;
+
+
+  
+  color: #C8A1E0;
 }
 
 @keyframes App-logo-spin {
