--- a/frontend/ui-ux/src/Navbar.css
+++ b/frontend/ui-ux/src/Navbar.css
@@ -20,6 +20,7 @@
   list-style-type: none;
   display: flex;
   margin: 0;
+  background-color: #C8A1E0;
   padding: 0;
 }
 
@@ -48,7 +49,9 @@
 
 .navbar-right .cart-count {
   background-color: #674188;
-  color: #fff;
+  
+  
+  color: #C8A1E0;
   border-radius: 50%;
   padding: 0.2rem 0.5rem;
   font-size: 0.8rem;
